--- a/requirements.txt
+++ b/requirements.txt
@@ -1,86 +1,80 @@
-altair==5.5.0
-annotated-types==0.7.0
-anyio==4.11.0
-asttokens==3.0.0
-attrs==25.3.0
-blinker==1.9.0
-cachetools==6.2.0
-certifi==2025.8.3
-charset-normalizer==3.4.3
-click==8.3.0
-colorama==0.4.6
-comm==0.2.3
-contourpy==1.3.3
-cycler==0.12.1
-debugpy==1.8.17
-decorator==5.2.1
-executing==2.2.1
-fastapi==0.118.0
-fonttools==4.60.1
-gitdb==4.0.12
-gitpython==3.1.45
-h11==0.16.0
-idna==3.10
-ipykernel==6.30.1
-ipython==9.6.0
-ipython-pygments-lexers==1.1.1
-jedi==0.19.2
-jinja2==3.1.6
-joblib==1.5.2
-jsonschema==4.25.1
-jsonschema-specifications==2025.9.1
-jupyter-client==8.6.3
-jupyter-core==5.8.1
-kiwisolver==1.4.9
-markupsafe==3.0.3
-matplotlib==3.10.6
-matplotlib-inline==0.1.7
-narwhals==2.6.0
-nest-asyncio==1.6.0
-numpy==2.3.3
-packaging==25.0
-pandas==2.3.3
-parso==0.8.5
-pillow==11.3.0
-platformdirs==4.4.0
-prompt-toolkit==3.0.52
-protobuf==6.32.1
-psutil==7.1.0
-pure-eval==0.2.3
-pyarrow==21.0.0
-pydantic==2.11.9
-pydantic-core==2.33.2
-pydeck==0.9.1
-pygments==2.19.2
-pyparsing==3.2.5
+asn1crypto==1.5.1
+black==25.1.0
+boto3==1.38.16
+botocore==1.38.16
+cryptography==44.0.3
+dbt-protos==1.0.312
+dbt-snowflake==1.7.0
+filelock==3.18.0
+jaraco.classes==3.4.0
+jaraco.context==6.0.1
+jaraco.functools==4.1.0
+jmespath==1.0.1
+kaggle==1.7.4.2
+kagglehub==0.3.10
+keyring==25.6.0
+Logbook==1.5.3
+lxml==5.3.1
+minimal-snowplow-tracker==0.0.2
+mypy-extensions==1.0.0
+Pygments==2.19.1
+PyJWT==2.10.1
+pyOpenSSL==25.0.0
+pyparsing==3.2.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+python-json-logger==3.2.1
+python-slugify==8.0.4
+pytimeparse==1.1.8
 pytz==2025.2
-pywin32==311
-pyzmq==27.1.0
+pywin32==308
+pywin32-ctypes==0.2.3
+pywinpty==2.0.15
+PyYAML==6.0.2
+pyzmq==26.2.1
 referencing==0.36.2
-requests==2.32.5
-rpds-py==0.27.1
-scikit-learn==1.7.2
-scipy==1.16.2
-seaborn==0.13.2
-setuptools==80.9.0
+requests==2.32.3
+requirements-parser==0.11.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==14.0.0
+rich-argparse==1.7.0
+rpds-py==0.24.0
+s3transfer==0.12.0
+semver==3.0.4
+Send2Trash==1.8.3
+setuptools==75.8.2
+shandy-sqlfmt==0.26.0
+simplejson==3.20.1
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
+snowflake-connector-python==3.15.0
+snowplow-tracker==1.1.0
+sortedcontainers==2.4.0
+soupsieve==2.6
+sqlglot==26.12.1
+sqlparse==0.5.3
 stack-data==0.6.3
-starlette==0.48.0
-streamlit==1.50.0
--e file:///C:/Users/metal/skola/taxi-prediction-fullstack-stefan-lundberg-opa24-1
 tenacity==9.1.2
-threadpoolctl==3.6.0
-toml==0.10.2
-tornado==6.5.2
+terminado==0.18.1
+text-unidecode==1.3
+tinycss2==1.4.0
+tomlkit==0.13.2
+tornado==6.4.2
+tqdm==4.67.1
 traitlets==5.14.3
-typing-extensions==4.15.0
-typing-inspection==0.4.1
-tzdata==2025.2
-urllib3==2.5.0
-uvicorn==0.37.0
-watchdog==6.0.0
-wcwidth==0.2.14
-xgboost==3.0.5
+types-python-dateutil==2.9.0.20241206
+types-setuptools==78.1.0.20250329
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+tzdata==2025.1
+uri-template==1.3.0
+urllib3==1.26.20
+uv==0.7.6
+wcwidth==0.2.13
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
+win-precise-time==1.4.2
+zipp==3.21.0
