--- a/src/taxipred/frontend/.streamlit/config.toml
+++ b/src/taxipred/frontend/.streamlit/config.toml
@@ -1,10 +1,10 @@
-[theme.fontFace]
-base = "dark"
-primaryColor = "#FF4B4B"
-backgroundColor = "#F0F2F6"
-secondaryBackgroundColor = "#E0E0E0"
-textColor = "#262730"
-font = "sans serif"
+# [theme]
+# base = "dark"
+# primaryColor = "#FF4B4B"
+# backgroundColor = "#F0F2F6"
+# secondaryBackgroundColor = "#E0E0E0"
+# textColor = "#262730"
+# font = "sans serif"
 
 
 
