--- a/src/taxipred/frontend/.streamlit/config.toml
+++ b/src/taxipred/frontend/.streamlit/config.toml
@@ -4,7 +4,7 @@
 # backgroundColor = "#F0F2F6"
 # secondaryBackgroundColor = "#E0E0E0"
 # textColor = "#262730"
-# font = "sans serif"
+# font = "circular"
 
 
 
